--- a/assets/css/_custom-properties.css
+++ b/assets/css/_custom-properties.css
@@ -6,47 +6,80 @@
  **/
 
 :root {
-	--global-font-color: #505050;
-	--global-font-family: "Open Sans", serif;
-	--global-font-size: 14;
-	--global-font-line-height: 1.4;
-	--highlight-font-family: "Open Sans", "Helvetica Neue", "Arial Narrow", sans-serif;
-	--content-width: 100%;
-	--dropdown-symbol-width: 0.7em;
-
-	/* Custom editor colors */
-	--color-theme-primary: #e36d60;
-	--color-theme-secondary: #41848f;
-	--color-theme-red: #c0392b;
-	--color-theme-green: #27ae60;
-	--color-theme-blue: #2980b9;
-	--color-theme-yellow: #f1c40f;
-	--color-theme-black: #1c2833;
-	--color-theme-grey: #95a5a6;
-	--color-theme-white: #ecf0f1;
-	--color-custom-daylight: #97c0b7;
-	--color-custom-sun: #eee9d1;
-
-	--color-link: #111;
-	--color-link-hover: #ef5455;
-	--color-link-active: #ef5455;
-	--global-border-color: #e8e8e8;
-
-	--button_background_color:#ef5455;
-	--button_background_hover_color:#f83939;
-	--button_border_color:#ef5455;
-	--button_border_hover_color: #f83939;
-
-	--color-quote-border: #111;
-	--color-quote-citation: #6c7781;
-
-	/* Custom editor font sizes */
-	--font-size-small: calc(16 / var(--global-font-size) * 1rem);
-	--font-size-regular: calc(var(--global-font-size) / 16 * 1rem);
-	--font-size-large: calc(36 / var(--global-font-size) * 1rem);
-	--font-size-larger: calc(48 / var(--global-font-size) * 1rem);
-
-	/* Global container width */
-	--container-width: 1170px;
-
+    --global-font-color: #505050;
+    --global-font-family: "Open Sans", serif;
+    --global-font-size: 14;
+    --global-font-line-height: 1.4;
+    --highlight-font-family: "Open Sans", "Helvetica Neue", "Arial Narrow", sans-serif;
+    --content-width: 100%;
+    --dropdown-symbol-width: 0.7em;
+    /* Custom editor colors */
+    --color-theme-primary: #e36d60;
+    --color-theme-secondary: #41848f;
+    --color-theme-red: #c0392b;
+    --color-theme-green: #27ae60;
+    --color-theme-blue: #2980b9;
+    --color-theme-yellow: #f1c40f;
+    --color-theme-black: #1c2833;
+    --color-theme-grey: #95a5a6;
+    --color-theme-white: #ecf0f1;
+    --color-custom-daylight: #97c0b7;
+    --color-custom-sun: #eee9d1;
+    --color-link: #111;
+    --color-link-hover: #ef5455;
+    --color-link-active: #ef5455;
+    --global-border-color: #e8e8e8;
+    --button_background_color: #ef5455;
+    --button_background_hover_color: #f83939;
+    --button_border_color: #ef5455;
+    --button_border_hover_color: #f83939;
+    --color-quote-border: #111;
+    --color-quote-citation: #6c7781;
+    /* Custom editor font sizes */
+    --font-size-small: calc(16 / var(--global-font-size) * 1rem);
+    --font-size-regular: calc(var(--global-font-size) / 16 * 1rem);
+    --font-size-large: calc(36 / var(--global-font-size) * 1rem);
+    --font-size-larger: calc(48 / var(--global-font-size) * 1rem);
+    /* Global container width */
+    --container-width: 1170px;
+    --container-sm: 540px;
+    --container-md: 740px;
+    --container-lg: 960px;
+    --container-xl: 1140px;
+    --container-xxl: 1400px;
+    --grid-gutter-width: 30px;
+    --el-spacing: 2rem;
+    /* Article */
+    --line-clamp-title: 2;
+    --line-clamp-with-media: 2;
+    --line-clamp-no-media: 3;
+    --line-clamp-big-title: 2;
+    --line-clamp-big-text: var(--line-clamp-big-text);
+    --bx-article-big-sm: 1rem;
+    --bx-article-big-md: 1rem;
+    --bx-article-big-lg: 1.25rem;
+    --bx-article-big-title-sm: 1.5rem;
+    --bx-article-big-title-md: 1.75rem;
+    --bx-article-big-title-lg: 2.25rem;
+    --line-clamp-list-title: 2;
+    --line-clamp-list-text: var(--line-clamp-list-text);
+    --bx-article-list-sm: 1rem;
+    --bx-article-list-md: 1rem;
+    --bx-article-list-lg: 1.15rem;
+    --bx-article-list-title-sm: 1.31rem;
+    --bx-article-list-title-md: 1.5rem;
+    --bx-article-list-title-lg: 1.75rem;
+    --line-clamp-card-title: 2;
+    --line-clamp-card-text: var(--line-clamp-card-text);
+    --bx-article-card-title-sm: 1.2rem;
+    --bx-article-card-title-md: 1.5rem;
+    --bx-article-card-title-lg: 1.5rem;
+    --bx-article-list-card-sm: 1rem;
+    --bx-article-list-card-md: 1rem;
+    --bx-article-list-card-lg: 1.15rem;
+    --line-clamp-grid-title: 2;
+    --line-clamp-grid-text: var(--line-clamp-grid-text);
+    --bx-article-grid-title-sm: 1.5rem;
+    --bx-article-grid-title-md: 1.75rem;
+    --bx-article-grid-title-lg: 2.25rem;
 }
