--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -220,8 +220,9 @@ article .entry-header {
 
 .single-post .entry-content ul:not(.blocks-gallery-grid),
 .single-post .entry-content ol {
-    padding-right: 2.5em;
-    padding-left: 2.5em;
+    margin-left: 0;
+    padding: 0;
+    padding-left: 16px;
 }
 
 .entry-content ul ul,
