--- a/assets/css/editor/editor-styles.css
+++ b/assets/css/editor/editor-styles.css
@@ -24,6 +24,7 @@
 @import "../_elements.css";
 @import "../_links.css";
 @import "../_media.css";
+/* @import "../_blocks.css"; */
 @import "../_grid.css";
 
 /*--------------------------------------------------------------
