--- a/assets/css/rtl.css
+++ b/assets/css/rtl.css
@@ -62,23 +62,12 @@ body:not(.block-editor-page):not(.wp-core-ui) pre {
     right: auto;
 }
 
-.buddypress-icons-wrapper .bp-msg,
-.buddypress-icons-wrapper .user-link-wrap,
-.buddypress-icons-wrapper .user-notifications {
-    margin: 0 10px 0 0;
+.buddypress-icons-wrapper {
+    margin-right: 15px;
+    margin-left: 0;
 }
 
-.menu-icons-wrapper {
-    float: left;
-    margin: 0 10px 0 0px;
-}
-
-.menu-icons-wrapper .cart,
-.menu-icons-wrapper .search {
-    float: right;
-}
-
-.menu-icons-wrapper div:last-child {
+.buddypress-icons-wrapper .user-link-wrap {
     margin-left: 0;
     margin-right: 10px;
 }
